gitops/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: ghcr.io/linuxserver/sonarr:4.0.20-develop
        imagePullPolicy: Always
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: sonarr-config
          mountPath: /config
        - name: data
          mountPath: /data
      volumes:
      - name: sonarr-config
        persistentVolumeClaim:
          claimName: sonarr-config
      - name: data
        hostPath:
          path: /data
          type: Directory
