gitops/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  ports:
  - name: app
    port: 80
    targetPort: 8989
    protocol: TCP
    appProtocol: http
  selector:
    app: sonarr
