gitops/sonarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: sonarr
spec:
  parentRefs:
  - name: main
    namespace: cilium-gateway
    sectionName: https-sonarr
  hostnames:
  - sonarr.sync.lt
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: sonarr
      port: 80
